// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hierarchicalLayout applies gravity away from the mean of fixed angles 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-center",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "fixed-node-1",
    },
    "edge-1": {
      "dest": "node-center",
      "diagrammerData": {},
      "id": "edge-1",
      "src": "fixed-node-2",
    },
    "edge-2": {
      "dest": "node-center",
      "diagrammerData": {},
      "id": "edge-2",
      "src": "fixed-node-3",
    },
    "edge-3": {
      "dest": "node-1",
      "diagrammerData": {},
      "id": "edge-3",
      "src": "node-center",
    },
    "edge-4": {
      "dest": "node-2",
      "diagrammerData": {},
      "id": "edge-4",
      "src": "node-center",
    },
    "edge-5": {
      "dest": "node-3",
      "diagrammerData": {},
      "id": "edge-5",
      "src": "node-center",
    },
    "edge-6": {
      "dest": "node-4",
      "diagrammerData": {},
      "id": "edge-6",
      "src": "node-center",
    },
    "edge-7": {
      "dest": "node-5",
      "diagrammerData": {},
      "id": "edge-7",
      "src": "node-center",
    },
    "edge-8": {
      "dest": "node-6",
      "diagrammerData": {},
      "id": "edge-8",
      "src": "node-center",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "fixed-node-1": {
      "diagrammerData": {
        "position": {
          "x": 300,
          "y": 400,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "fixed-node-1",
    },
    "fixed-node-2": {
      "diagrammerData": {
        "position": {
          "x": 500,
          "y": 400,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "fixed-node-2",
    },
    "fixed-node-3": {
      "diagrammerData": {
        "position": {
          "x": 500,
          "y": 300,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "fixed-node-3",
    },
    "node-1": {
      "diagrammerData": {
        "position": {
          "x": 388.7992051638202,
          "y": 451.71201591153357,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-1",
    },
    "node-2": {
      "diagrammerData": {
        "position": {
          "x": 352.4784351781109,
          "y": 418.4207529237788,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-2",
    },
    "node-3": {
      "diagrammerData": {
        "position": {
          "x": 337.3443337051914,
          "y": 365.2134115656732,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-3",
    },
    "node-4": {
      "diagrammerData": {
        "position": {
          "x": 346.12577836656243,
          "y": 326.53136603595465,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-4",
    },
    "node-5": {
      "diagrammerData": {
        "position": {
          "x": 376.80336318236294,
          "y": 289.0756718623055,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-5",
    },
    "node-6": {
      "diagrammerData": {
        "position": {
          "x": 515.8902785313585,
          "y": 317.6732916087034,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-6",
    },
    "node-center": {
      "diagrammerData": {
        "position": {
          "x": 433.3333333333333,
          "y": 366.6666666666667,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-center",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;

exports[`hierarchicalLayout correctly lays out a tree with multiple fixed nodes 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-a",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "node-start",
    },
    "edge-1": {
      "dest": "node-b",
      "diagrammerData": {},
      "id": "edge-1",
      "src": "node-start",
    },
    "edge-10": {
      "dest": "node-c-1",
      "diagrammerData": {},
      "id": "edge-10",
      "src": "node-c",
    },
    "edge-11": {
      "dest": "node-c-2",
      "diagrammerData": {},
      "id": "edge-11",
      "src": "node-c",
    },
    "edge-12": {
      "dest": "node-c-1-1",
      "diagrammerData": {},
      "id": "edge-12",
      "src": "node-c-1",
    },
    "edge-2": {
      "dest": "node-c",
      "diagrammerData": {},
      "id": "edge-2",
      "src": "node-start",
    },
    "edge-3": {
      "dest": "node-a-1",
      "diagrammerData": {},
      "id": "edge-3",
      "src": "node-a",
    },
    "edge-4": {
      "dest": "node-a-2",
      "diagrammerData": {},
      "id": "edge-4",
      "src": "node-a",
    },
    "edge-5": {
      "dest": "node-a-3",
      "diagrammerData": {},
      "id": "edge-5",
      "src": "node-a",
    },
    "edge-6": {
      "dest": "node-a-4",
      "diagrammerData": {},
      "id": "edge-6",
      "src": "node-a",
    },
    "edge-7": {
      "dest": "node-b-1",
      "diagrammerData": {},
      "id": "edge-7",
      "src": "node-b",
    },
    "edge-8": {
      "dest": "node-b-2",
      "diagrammerData": {},
      "id": "edge-8",
      "src": "node-b",
    },
    "edge-9": {
      "dest": "node-b-3",
      "diagrammerData": {},
      "id": "edge-9",
      "src": "node-b",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "node-a": {
      "diagrammerData": {
        "position": {
          "x": 300,
          "y": 400,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-a",
    },
    "node-a-1": {
      "diagrammerData": {
        "position": {
          "x": 327.8115294937453,
          "y": 485.5950864665638,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-a-1",
    },
    "node-a-2": {
      "diagrammerData": {
        "position": {
          "x": 227.18847050625476,
          "y": 452.9006727063226,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-a-2",
    },
    "node-a-3": {
      "diagrammerData": {
        "position": {
          "x": 227.18847050625473,
          "y": 347.09932729367745,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-a-3",
    },
    "node-a-4": {
      "diagrammerData": {
        "position": {
          "x": 327.81152949374524,
          "y": 314.4049135334362,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-a-4",
    },
    "node-b": {
      "diagrammerData": {
        "position": {
          "x": 500,
          "y": 400,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-b",
    },
    "node-b-1": {
      "diagrammerData": {
        "position": {
          "x": 590,
          "y": 400,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-b-1",
    },
    "node-b-2": {
      "diagrammerData": {
        "position": {
          "x": 500,
          "y": 490,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-b-2",
    },
    "node-b-3": {
      "diagrammerData": {
        "position": {
          "x": 500,
          "y": 310,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-b-3",
    },
    "node-c": {
      "diagrammerData": {
        "position": {
          "x": 490,
          "y": 100,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-c",
    },
    "node-c-1": {
      "diagrammerData": {
        "position": {
          "x": 400,
          "y": 100,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-c-1",
    },
    "node-c-1-1": {
      "diagrammerData": {
        "position": {
          "x": 310,
          "y": 100.00000000000001,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-c-1-1",
    },
    "node-c-2": {
      "diagrammerData": {
        "position": {
          "x": 547.7650908368364,
          "y": 57.02100186588763,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-c-2",
    },
    "node-start": {
      "diagrammerData": {
        "position": {
          "x": 400,
          "y": 400,
        },
        "size": {
          "height": 20,
          "width": 20,
        },
      },
      "id": "node-start",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;

exports[`hierarchicalLayout correctly lays out a tree with one fixed node 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-a",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "node-start",
    },
    "edge-1": {
      "dest": "node-b",
      "diagrammerData": {},
      "id": "edge-1",
      "src": "node-start",
    },
    "edge-10": {
      "dest": "node-c-1",
      "diagrammerData": {},
      "id": "edge-10",
      "src": "node-c",
    },
    "edge-11": {
      "dest": "node-c-2",
      "diagrammerData": {},
      "id": "edge-11",
      "src": "node-c",
    },
    "edge-12": {
      "dest": "node-c-1-1",
      "diagrammerData": {},
      "id": "edge-12",
      "src": "node-c-1",
    },
    "edge-2": {
      "dest": "node-c",
      "diagrammerData": {},
      "id": "edge-2",
      "src": "node-start",
    },
    "edge-3": {
      "dest": "node-a-1",
      "diagrammerData": {},
      "id": "edge-3",
      "src": "node-a",
    },
    "edge-4": {
      "dest": "node-a-2",
      "diagrammerData": {},
      "id": "edge-4",
      "src": "node-a",
    },
    "edge-5": {
      "dest": "node-a-3",
      "diagrammerData": {},
      "id": "edge-5",
      "src": "node-a",
    },
    "edge-6": {
      "dest": "node-a-4",
      "diagrammerData": {},
      "id": "edge-6",
      "src": "node-a",
    },
    "edge-7": {
      "dest": "node-b-1",
      "diagrammerData": {},
      "id": "edge-7",
      "src": "node-b",
    },
    "edge-8": {
      "dest": "node-b-2",
      "diagrammerData": {},
      "id": "edge-8",
      "src": "node-b",
    },
    "edge-9": {
      "dest": "node-b-3",
      "diagrammerData": {},
      "id": "edge-9",
      "src": "node-b",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "node-a": {
      "diagrammerData": {
        "position": {
          "x": 400,
          "y": 650,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a",
    },
    "node-a-1": {
      "diagrammerData": {
        "position": {
          "x": 488.167787843871,
          "y": 771.3525491562422,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a-1",
    },
    "node-a-2": {
      "diagrammerData": {
        "position": {
          "x": 311.83221215612906,
          "y": 771.3525491562422,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a-2",
    },
    "node-a-3": {
      "diagrammerData": {
        "position": {
          "x": 257.34152255572695,
          "y": 603.647450843758,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a-3",
    },
    "node-a-4": {
      "diagrammerData": {
        "position": {
          "x": 542.658477444273,
          "y": 603.6474508437578,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a-4",
    },
    "node-b": {
      "diagrammerData": {
        "position": {
          "x": 183.4936490538903,
          "y": 275.00000000000006,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b",
    },
    "node-b-1": {
      "diagrammerData": {
        "position": {
          "x": 108.49364905389032,
          "y": 404.90381056766586,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b-1",
    },
    "node-b-2": {
      "diagrammerData": {
        "position": {
          "x": 53.589838486224465,
          "y": 200.0000000000001,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b-2",
    },
    "node-b-3": {
      "diagrammerData": {
        "position": {
          "x": 258.4936490538902,
          "y": 145.0961894323342,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b-3",
    },
    "node-c": {
      "diagrammerData": {
        "position": {
          "x": 616.5063509461096,
          "y": 274.9999999999999,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c",
    },
    "node-c-1": {
      "diagrammerData": {
        "position": {
          "x": 746.4101615137754,
          "y": 349.9999999999999,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c-1",
    },
    "node-c-1-1": {
      "diagrammerData": {
        "position": {
          "x": 833.0127018922193,
          "y": 399.99999999999983,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c-1-1",
    },
    "node-c-2": {
      "diagrammerData": {
        "position": {
          "x": 616.5063509461096,
          "y": 124.99999999999989,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c-2",
    },
    "node-start": {
      "diagrammerData": {
        "position": {
          "x": 400,
          "y": 400,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-start",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;

exports[`hierarchicalLayout correctly propagates gravity throughout the graph 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-a",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "node-start",
    },
    "edge-1": {
      "dest": "node-b",
      "diagrammerData": {},
      "id": "edge-1",
      "src": "node-start",
    },
    "edge-10": {
      "dest": "node-c-1",
      "diagrammerData": {},
      "id": "edge-10",
      "src": "node-c",
    },
    "edge-11": {
      "dest": "node-c-2",
      "diagrammerData": {},
      "id": "edge-11",
      "src": "node-c",
    },
    "edge-12": {
      "dest": "node-c-1-1",
      "diagrammerData": {},
      "id": "edge-12",
      "src": "node-c-1",
    },
    "edge-2": {
      "dest": "node-c",
      "diagrammerData": {},
      "id": "edge-2",
      "src": "node-start",
    },
    "edge-3": {
      "dest": "node-a-1",
      "diagrammerData": {},
      "id": "edge-3",
      "src": "node-a",
    },
    "edge-4": {
      "dest": "node-a-2",
      "diagrammerData": {},
      "id": "edge-4",
      "src": "node-a",
    },
    "edge-5": {
      "dest": "node-a-3",
      "diagrammerData": {},
      "id": "edge-5",
      "src": "node-a",
    },
    "edge-6": {
      "dest": "node-a-4",
      "diagrammerData": {},
      "id": "edge-6",
      "src": "node-a",
    },
    "edge-7": {
      "dest": "node-b-1",
      "diagrammerData": {},
      "id": "edge-7",
      "src": "node-b",
    },
    "edge-8": {
      "dest": "node-b-2",
      "diagrammerData": {},
      "id": "edge-8",
      "src": "node-b",
    },
    "edge-9": {
      "dest": "node-b-3",
      "diagrammerData": {},
      "id": "edge-9",
      "src": "node-b",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "node-a": {
      "diagrammerData": {
        "position": {
          "x": 616.5063509461097,
          "y": 524.9999999999999,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a",
    },
    "node-a-1": {
      "diagrammerData": {
        "position": {
          "x": 763.2284910561806,
          "y": 556.1867536226637,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a-1",
    },
    "node-a-2": {
      "diagrammerData": {
        "position": {
          "x": 716.8759418999385,
          "y": 636.471723821609,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a-2",
    },
    "node-a-3": {
      "diagrammerData": {
        "position": {
          "x": 608.6559575096683,
          "y": 674.7944302131859,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a-3",
    },
    "node-a-4": {
      "diagrammerData": {
        "position": {
          "x": 742.3069361379232,
          "y": 443.30414474774574,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a-4",
    },
    "node-b": {
      "diagrammerData": {
        "position": {
          "x": 400,
          "y": 650,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b",
    },
    "node-b-1": {
      "diagrammerData": {
        "position": {
          "x": 506.0660171779821,
          "y": 756.0660171779821,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b-1",
    },
    "node-b-2": {
      "diagrammerData": {
        "position": {
          "x": 400,
          "y": 800,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b-2",
    },
    "node-b-3": {
      "diagrammerData": {
        "position": {
          "x": 293.93398282201787,
          "y": 756.0660171779821,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b-3",
    },
    "node-c": {
      "diagrammerData": {
        "position": {
          "x": 183.49364905389038,
          "y": 525.0000000000001,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c",
    },
    "node-c-1": {
      "diagrammerData": {
        "position": {
          "x": 108.49364905389035,
          "y": 654.9038105676659,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c-1",
    },
    "node-c-1-1": {
      "diagrammerData": {
        "position": {
          "x": 58.49364905389025,
          "y": 741.5063509461097,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c-1-1",
    },
    "node-c-2": {
      "diagrammerData": {
        "position": {
          "x": 33.49364905389038,
          "y": 525.0000000000001,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c-2",
    },
    "node-start": {
      "diagrammerData": {
        "position": {
          "x": 400,
          "y": 400,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-start",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;

exports[`hierarchicalLayout falls back to initial \`gravityAngle\` when mean is NaN 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-center",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "fixed-node-1",
    },
    "edge-1": {
      "dest": "node-center",
      "diagrammerData": {},
      "id": "edge-1",
      "src": "fixed-node-2",
    },
    "edge-2": {
      "dest": "node-1",
      "diagrammerData": {},
      "id": "edge-2",
      "src": "node-center",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "fixed-node-1": {
      "diagrammerData": {
        "position": {
          "x": 300,
          "y": 400,
        },
        "size": {
          "height": 50,
          "width": 50,
        },
      },
      "id": "fixed-node-1",
    },
    "fixed-node-2": {
      "diagrammerData": {
        "position": {
          "x": 500,
          "y": 400,
        },
        "size": {
          "height": 50,
          "width": 50,
        },
      },
      "id": "fixed-node-2",
    },
    "node-1": {
      "diagrammerData": {
        "position": {
          "x": 400,
          "y": 304,
        },
        "size": {
          "height": 50,
          "width": 50,
        },
      },
      "id": "node-1",
    },
    "node-center": {
      "diagrammerData": {
        "position": {
          "x": 400,
          "y": 400,
        },
        "size": {
          "height": 50,
          "width": 50,
        },
      },
      "id": "node-center",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;

exports[`hierarchicalLayout finds optimal arrangement of free nodes between fixed nodes 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-center",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "fixed-node-1",
    },
    "edge-1": {
      "dest": "node-center",
      "diagrammerData": {},
      "id": "edge-1",
      "src": "fixed-node-2",
    },
    "edge-2": {
      "dest": "node-center",
      "diagrammerData": {},
      "id": "edge-2",
      "src": "fixed-node-3",
    },
    "edge-3": {
      "dest": "node-1",
      "diagrammerData": {},
      "id": "edge-3",
      "src": "node-center",
    },
    "edge-4": {
      "dest": "node-2",
      "diagrammerData": {},
      "id": "edge-4",
      "src": "node-center",
    },
    "edge-5": {
      "dest": "node-3",
      "diagrammerData": {},
      "id": "edge-5",
      "src": "node-center",
    },
    "edge-6": {
      "dest": "node-4",
      "diagrammerData": {},
      "id": "edge-6",
      "src": "node-center",
    },
    "edge-7": {
      "dest": "node-5",
      "diagrammerData": {},
      "id": "edge-7",
      "src": "node-center",
    },
    "edge-8": {
      "dest": "node-6",
      "diagrammerData": {},
      "id": "edge-8",
      "src": "node-center",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "fixed-node-1": {
      "diagrammerData": {
        "position": {
          "x": 300,
          "y": 400,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "fixed-node-1",
    },
    "fixed-node-2": {
      "diagrammerData": {
        "position": {
          "x": 500,
          "y": 400,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "fixed-node-2",
    },
    "fixed-node-3": {
      "diagrammerData": {
        "position": {
          "x": 500,
          "y": 300,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "fixed-node-3",
    },
    "node-1": {
      "diagrammerData": {
        "position": {
          "x": 461.3508826485333,
          "y": 458.48723587841977,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-1",
    },
    "node-2": {
      "diagrammerData": {
        "position": {
          "x": 386.06428611749413,
          "y": 450.222858390002,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-2",
    },
    "node-3": {
      "diagrammerData": {
        "position": {
          "x": 345.11140852262724,
          "y": 328.8131069569892,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-3",
    },
    "node-4": {
      "diagrammerData": {
        "position": {
          "x": 386.0342470949084,
          "y": 283.1274756183327,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-4",
    },
    "node-5": {
      "diagrammerData": {
        "position": {
          "x": 446.2639795200021,
          "y": 271.5414944502907,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-5",
    },
    "node-6": {
      "diagrammerData": {
        "position": {
          "x": 528.093729266533,
          "y": 351.2891713379978,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-6",
    },
    "node-center": {
      "diagrammerData": {
        "position": {
          "x": 433.3333333333333,
          "y": 366.6666666666667,
        },
        "size": {
          "height": 40,
          "width": 40,
        },
      },
      "id": "node-center",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;

exports[`hierarchicalLayout handles nodes with varying sizes 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-1",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "node-start",
    },
    "edge-1": {
      "dest": "node-2",
      "diagrammerData": {},
      "id": "edge-1",
      "src": "node-1",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "node-1": {
      "diagrammerData": {
        "position": {
          "x": 465,
          "y": 265,
        },
        "size": {
          "height": 80,
          "width": 20,
        },
      },
      "id": "node-1",
    },
    "node-2": {
      "diagrammerData": {
        "position": {
          "x": 550,
          "y": 280,
        },
        "size": {
          "height": 50,
          "width": 50,
        },
      },
      "id": "node-2",
    },
    "node-start": {
      "diagrammerData": {
        "position": {
          "x": 300,
          "y": 300,
        },
        "size": {
          "height": 10,
          "width": 150,
        },
      },
      "id": "node-start",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;

exports[`hierarchicalLayout pushes nodes towards \`gravityAngle\` (even number of nodes) 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-a",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "node-start",
    },
    "edge-1": {
      "dest": "node-b",
      "diagrammerData": {},
      "id": "edge-1",
      "src": "node-start",
    },
    "edge-2": {
      "dest": "node-c",
      "diagrammerData": {},
      "id": "edge-2",
      "src": "node-start",
    },
    "edge-3": {
      "dest": "node-d",
      "diagrammerData": {},
      "id": "edge-3",
      "src": "node-start",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "node-a": {
      "diagrammerData": {
        "position": {
          "x": 437.87030088828516,
          "y": 509.09128643864267,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a",
    },
    "node-b": {
      "diagrammerData": {
        "position": {
          "x": 314.8690171883659,
          "y": 599.261221781989,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b",
    },
    "node-c": {
      "diagrammerData": {
        "position": {
          "x": 305.4674869181774,
          "y": 300.09967782956716,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c",
    },
    "node-d": {
      "diagrammerData": {
        "position": {
          "x": 433.88787276781886,
          "y": 382.3683688965855,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-d",
    },
    "node-start": {
      "diagrammerData": {
        "position": {
          "x": 300,
          "y": 450,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-start",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;

exports[`hierarchicalLayout pushes nodes towards \`gravityAngle\` (odd number of nodes) 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-a",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "node-start",
    },
    "edge-1": {
      "dest": "node-b",
      "diagrammerData": {},
      "id": "edge-1",
      "src": "node-start",
    },
    "edge-2": {
      "dest": "node-c",
      "diagrammerData": {},
      "id": "edge-2",
      "src": "node-start",
    },
    "edge-3": {
      "dest": "node-d",
      "diagrammerData": {},
      "id": "edge-3",
      "src": "node-start",
    },
    "edge-4": {
      "dest": "node-e",
      "diagrammerData": {},
      "id": "edge-4",
      "src": "node-start",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "node-a": {
      "diagrammerData": {
        "position": {
          "x": 217.79675701591964,
          "y": 486.64187280830834,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a",
    },
    "node-b": {
      "diagrammerData": {
        "position": {
          "x": 214.8107747659059,
          "y": 420.96905265040795,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b",
    },
    "node-c": {
      "diagrammerData": {
        "position": {
          "x": 236.36038969321072,
          "y": 386.3603896932107,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c",
    },
    "node-d": {
      "diagrammerData": {
        "position": {
          "x": 270.96905265040795,
          "y": 364.8107747659059,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-d",
    },
    "node-e": {
      "diagrammerData": {
        "position": {
          "x": 336.6418728083082,
          "y": 367.79675701591964,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-e",
    },
    "node-start": {
      "diagrammerData": {
        "position": {
          "x": 300,
          "y": 450,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-start",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;

exports[`hierarchicalLayout pushes nodes towards \`gravityAngle\` (single node) 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-a",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "node-start",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "node-a": {
      "diagrammerData": {
        "position": {
          "x": 270,
          "y": 450,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a",
    },
    "node-start": {
      "diagrammerData": {
        "position": {
          "x": 450,
          "y": 450,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-start",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;

exports[`hierarchicalLayout uses \`gravityAngle\` even when \`gravityStrength\` is zero (even number of nodes) 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-a",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "node-start",
    },
    "edge-1": {
      "dest": "node-b",
      "diagrammerData": {},
      "id": "edge-1",
      "src": "node-start",
    },
    "edge-2": {
      "dest": "node-c",
      "diagrammerData": {},
      "id": "edge-2",
      "src": "node-start",
    },
    "edge-3": {
      "dest": "node-d",
      "diagrammerData": {},
      "id": "edge-3",
      "src": "node-start",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "node-a": {
      "diagrammerData": {
        "position": {
          "x": 633.3379259803436,
          "y": 521.1186527804311,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a",
    },
    "node-b": {
      "diagrammerData": {
        "position": {
          "x": 478.88134721956885,
          "y": 633.3379259803436,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b",
    },
    "node-c": {
      "diagrammerData": {
        "position": {
          "x": 366.6620740196564,
          "y": 478.88134721956885,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c",
    },
    "node-d": {
      "diagrammerData": {
        "position": {
          "x": 521.1186527804311,
          "y": 366.6620740196564,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-d",
    },
    "node-start": {
      "diagrammerData": {
        "position": {
          "x": 500,
          "y": 500,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-start",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;

exports[`hierarchicalLayout uses \`gravityAngle\` even when \`gravityStrength\` is zero (odd number of nodes) 1`] = `
{
  "edges": {
    "edge-0": {
      "dest": "node-a",
      "diagrammerData": {},
      "id": "edge-0",
      "src": "node-start",
    },
    "edge-1": {
      "dest": "node-b",
      "diagrammerData": {},
      "id": "edge-1",
      "src": "node-start",
    },
    "edge-2": {
      "dest": "node-c",
      "diagrammerData": {},
      "id": "edge-2",
      "src": "node-start",
    },
  },
  "editor": {
    "mode": "Select",
  },
  "nodes": {
    "node-a": {
      "diagrammerData": {
        "position": {
          "x": 694.8557158514988,
          "y": 612.4999999999999,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-a",
    },
    "node-b": {
      "diagrammerData": {
        "position": {
          "x": 305.14428414850136,
          "y": 612.5000000000002,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-b",
    },
    "node-c": {
      "diagrammerData": {
        "position": {
          "x": 500,
          "y": 275,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-c",
    },
    "node-start": {
      "diagrammerData": {
        "position": {
          "x": 500,
          "y": 500,
        },
        "size": {
          "height": 30,
          "width": 30,
        },
      },
      "id": "node-start",
    },
  },
  "panels": {},
  "workspace": {
    "canvasSize": {
      "height": 1600,
      "width": 1600,
    },
    "position": {
      "x": 0,
      "y": 0,
    },
    "scale": 1,
    "viewContainerSize": {
      "height": 800,
      "width": 800,
    },
  },
}
`;
